# open-raid-z

./: .gitignore  CHAT_HANDOFF.md  CLAUDE.md  MIGRATION.md  PORTING.md  README-Arabic.md  README-Chinese.md  README-English.md  README-France.md  README-Germany.md  README-Italy.md  README-Japan.md  README-Korea.md  README-Russia.md  README-Spain.md  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
README/: README-Arabic.md  README-France.md  README-Germany.md  README-Iran(Persian).md  README-Italy.md  README-Japan.md  README-Russia.md  README-UK-English.md  README-US-English.md  README-Ukraine.md
open-runo-zfs-source/: CHAT_HANDOFF.md
open-runo-zfs-source/openruno-installer/: index.html  package-lock.json  package.json
open-runo-zfs-source/openruno-installer/.claude/: launch.json
open-runo-zfs-source/openruno-installer/src/: i18n.ts  main.ts  styles.css
open-runo-zfs-source/openruno-installer/src-tauri/: Cargo.toml  tauri.conf.json
open-runo-zfs-source/openruno-installer/src-tauri/src/: hardware.rs  lib.rs  main.rs  zpool_wizard.rs
open-runo-zfs-source/openzfs-winfsp-bridge/: Cargo.toml  build.rs
open-runo-zfs-source/openzfs-winfsp-bridge/src/: acl_emulation.rs  block_device.rs  checksum.rs  error.rs  exfat_emulation.rs  fs_ops.rs  id_mapping.rs  lib.rs  mount.rs  partition.rs  pool.rs  raid10.rs  vdev.rs
open-runo-zfs-source/openzfs-winfsp-bridge/tests/: checksum_self_healing.rs  copy_on_write.rs  dual_role_disk.rs  error_semantics.rs  pool_management.rs  pool_scrub.rs  raid10_pool_integration.rs  raid_series.rs  raidz_failure_recovery.rs  snapshots_and_clones.rs  unaligned_io.rs  winfsp_mount.rs
open-runo-zfs-source/zfs-accel-hlsl/: Cargo.toml  build.rs
open-runo-zfs-source/zfs-accel-hlsl/shaders/: raidz2_parity.hlsl  raidz_parity.hlsl
open-runo-zfs-source/zfs-accel-hlsl/src/: compute.rs  device.rs  galois.rs  lib.rs  raidz23_parity.rs  raidz_parity.rs
open_runo_zfs_source/: CHAT_HANDOFF.md
open_runo_zfs_source/open_raid_z_core/: Cargo.toml  build.rs  rustfmt.toml
open_runo_zfs_source/open_raid_z_core/contrib/systemd/: MULTIPLATFORM_ROADMAP.md  ROOT_ON_RAIDZ_DESIGN.md  open-raid-z-pool.service.example  root-on-raidz-init.sh.draft
open_runo_zfs_source/open_raid_z_core/examples/: exfat_smoke_test.rs  foreign_fs_smoke_test.rs  format_exfat_image.rs  format_fat32_image.rs
open_runo_zfs_source/open_raid_z_core/src/: acl_emulation.rs  block_device.rs  error.rs  exfat_emulation.rs  foreign_fs.rs  foreign_fuse_mount.rs  fs_ops.rs  fuse_mount.rs  id_mapping.rs  lib.rs  migrate.rs  mount.rs  partition.rs  pool.rs  raid10.rs  vdev.rs
open_runo_zfs_source/open_raid_z_core/tests/: checksum_self_healing.rs  copy_on_write.rs  dual_role_disk.rs  dynamic_file_size.rs  error_semantics.rs  foreign_ext4.rs  fuse_mount.rs  pool_management.rs  pool_persistence.rs  pool_scrub.rs  raid10_pool_integration.rs  raid_series.rs  raidz_failure_recovery.rs  snapshots_and_clones.rs  unaligned_io.rs  winfsp_mount.rs  winfsp_mount_file_ops.rs
open_runo_zfs_source/open_raid_z_core/tests/fixtures/: ext4_small.img
open_runo_zfs_source/open_runo_installer/: index.html  package-lock.json  package.json
open_runo_zfs_source/open_runo_installer/.claude/: launch.json
open_runo_zfs_source/open_runo_installer/src/: i18n.ts  main.ts  styles.css
open_runo_zfs_source/open_runo_installer/src-tauri/: Cargo.toml  tauri.conf.json
open_runo_zfs_source/open_runo_installer/src-tauri/src/: lib.rs  main.rs
open_runo_zfs_source/open_runo_installer_core/: Cargo.toml  build.rs
open_runo_zfs_source/open_runo_installer_core/src/: copilot.rs  hardware.rs  lib.rs  zpool_wizard.rs
open_runo_zfs_source/open_zfs_winfsp_bridge/: Cargo.toml
open_runo_zfs_source/open_zfs_winfsp_bridge/src/: error.rs  id_mapping.rs  lib.rs  mount.rs  vdev.rs
open_runo_zfs_source/open_zfs_winfsp_bridge/tests/: checksum_self_healing.rs  copy_on_write.rs  dual_role_disk.rs  dynamic_file_size.rs  error_semantics.rs  pool_management.rs  pool_scrub.rs  raid10_pool_integration.rs  raid_series.rs  raidz_failure_recovery.rs  snapshots_and_clones.rs  unaligned_io.rs  winfsp_mount.rs  winfsp_mount_file_ops.rs
open_runo_zfs_source/wdk_driver/: .gitignore  README.md  build.bat
open_runo_zfs_source/wdk_driver/orzflt/: driver.c  orzflt.inf
open_runo_zfs_source/zfs_accel_hlsl/: Cargo.toml  build.rs
open_runo_zfs_source/zfs_accel_hlsl/shaders/: raidnpu_parity.hlsl  raidnpu_z2_parity.hlsl  raidnpu_z3_parity.hlsl  raidz2_parity.comp  raidz3_parity.comp  raidz3_parity.hlsl  raidz_parity.comp
open_runo_zfs_source/zfs_accel_hlsl/src/: benchmark.rs  bitmatrix.rs  compute.rs  device.rs  dml_gemm.rs  gf_matrix.rs  lib.rs  raidz23_parity.rs  raidz_parity.rs  vulkan_compute.rs  vulkan_device.rs
