[workspace]

[package]
name = "openzfs-winfsp-bridge"
version = "0.0.1"
edition = "2021"
description = "OpenRuno: ZFS on Windows <-> NTFS ACL互換ブリッジ (WinFsp経由)"
license = "MPL-2.0"

[dependencies]
# WinFsp の Rust バインディング。実運用では winfsp-rs / winfsp-sys を使用します。
# https://github.com/SnowflakePowered/winfsp-rs
winfsp = { version = "0.13", optional = true }
windows = { version = "0.58", features = [
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_Foundation",
] }
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
bitflags = { version = "2.6", features = ["serde"] }
zfs-accel-hlsl = { path = "../zfs-accel-hlsl" }

[features]
# CI環境などWinFspヘッダが無い場合でもビルドできるようダミー実装を切替可能に
default = ["winfsp-backend"]
winfsp-backend = ["dep:winfsp"]

[lib]
name = "openzfs_winfsp_bridge"
crate-type = ["cdylib", "rlib"]
