[workspace]

[package]
name = "openzfs-winfsp-bridge"
version = "0.0.1"
edition = "2021"
description = "OpenRuno: ZFS on Windows <-> NTFS ACL互換ブリッジ (WinFsp経由)"
license = "MPL-2.0"

[dependencies]
# WinFsp の実Rustバインディング。実際にWindows上へマウント可能なファイル
# システムを構築するために使用する(mount.rs参照)。
winfsp = { version = "0.13", optional = true }
widestring = { version = "1", optional = true }
windows = { version = "0.58", features = [
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_Foundation",
] }
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
bitflags = { version = "2.6", features = ["serde"] }
zfs-accel-hlsl = { path = "../zfs-accel-hlsl" }
sha2 = "0.10"

[build-dependencies]
winfsp = { version = "0.13" }

[features]
# CI環境などWinFspヘッダが無い場合でもビルドできるようダミー実装を切替可能に
default = ["winfsp-backend"]
winfsp-backend = ["dep:winfsp", "dep:widestring"]

[lib]
name = "openzfs_winfsp_bridge"
crate-type = ["cdylib", "rlib"]
