[workspace]

[package]
name = "open_raid_z_core"
version = "0.0.1"
edition = "2021"
description = "open-raid-z: ZFS風RAIDプール・実マウント(Windows=WinFsp / Linux=FUSE)のOS共通コア"
license = "MPL-2.0"

[dependencies]
# WinFsp の実Rustバインディング。実際にWindows上へマウント可能なファイル
# システムを構築するために使用する(mount.rs参照)。
winfsp = { version = "0.13", optional = true }
widestring = { version = "1", optional = true }
windows = { version = "0.58", features = [
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_Foundation",
] }
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
bitflags = { version = "2.6", features = ["serde"] }
zfs_accel_hlsl = { path = "../zfs_accel_hlsl", default-features = false }
sha2 = "0.10"
# プールのメタデータ(データセット一覧・ストライプ割当等)を予約ストライプへ
# シリアライズして永続化するために使用する(pool.rs参照)。
bincode = "1.3"

[target.'cfg(target_os = "linux")'.dependencies]
# Linux版の実マウント(fuse_mount.rs参照)。WinFspの`winfsp`クレートに相当する、
# LinuxのFUSE(Filesystem in Userspace)への実Rustバインディング。
fuser = { version = "0.17", optional = true }

[build-dependencies]
# NOTE: `dependencies` の winfsp と同じ optional 化が必須。ここを外すと
# `--no-default-features` を指定しても cargo が常に winfsp(および
# winfsp-sys 経由のWinFsp SDKヘッダ)を要求してしまい、WinFsp未導入の
# 非Windows/CI環境でのビルドが不可能になる(READMEの
# `cargo test --no-default-features` の前提が崩れるため要注意)。
winfsp = { version = "0.13", optional = true }

[features]
# CI環境などWinFspヘッダが無い場合でもビルドできるようダミー実装を切替可能に
default = ["winfsp_backend", "gpu_accel"]
winfsp_backend = ["dep:winfsp", "dep:widestring"]
# 実際のD3D12/DirectMLディスパッチとHLSLシェーダの事前コンパイル(dxcが必要)。
# 無効化すると`zfs_accel_hlsl`はCPUフォールバックのみを提供するため、
# WinFsp・dxc・Windows SDKのいずれも不要になり、
# `cargo test --no-default-features` だけでRAID-Z/Z2/Z3のプール管理・
# パリティ計算・障害復旧ロジックを非Windows環境でも検証できる。
gpu_accel = ["zfs_accel_hlsl/gpu"]
# Linux版の実マウント(FUSE経由)。既定では無効(winfsp_backend/gpu_accelと
# 同様、明示的に有効化する)。Linux以外のターゲットでは`fuser`クレート自体が
# 依存関係として存在しないため、他OSでこのfeatureを有効化することはできない。
fuse_backend = ["dep:fuser"]

[lib]
name = "open_raid_z_core"
crate-type = ["cdylib", "rlib"]
