[workspace]

[package]
name = "open_raid_z_core"
version = "0.0.1"
edition = "2021"
description = "open-raid-z: ZFS風RAIDプール・実マウント(Windows=WinFsp / Linux=FUSE)のOS共通コア"
license = "MPL-2.0"

[dependencies]
# WinFsp の実Rustバインディング。実際にWindows上へマウント可能なファイル
# システムを構築するために使用する(mount.rs参照)。
winfsp = { version = "0.13", optional = true }
widestring = { version = "1", optional = true }
windows = { version = "0.58", features = [
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_Foundation",
] }
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
bitflags = { version = "2.6", features = ["serde"] }
zfs_accel_hlsl = { path = "../zfs_accel_hlsl", default-features = false }
sha2 = "0.10"
# プールのメタデータ(データセット一覧・ストライプ割当等)を予約ストライプへ
# シリアライズして永続化するために使用する(pool.rs参照)。
bincode = "1.3"
# 既存OS(Windows/Mac/Linux/Android等)のFAT32/FAT16フォーマット
# (USBメモリ/microSD/CFカード等で最も一般的)を読み書きするために使用する
# (foreign_fs.rs参照)。純Rust実装で追加のネイティブライブラリを要さない
# ため、`foreign_fs`feature有効時は全OSでビルドできる。
fatfs = { version = "0.3", optional = true }
fscommon = { version = "0.1", optional = true }
# exFAT(読み書き両対応)。純Rust実装で追加のネイティブライブラリを要さない
# (foreign_fs.rs参照)。旧`exfat-fs`(0.1系、読み取り専用)から、書き込みに
# 対応した`hadris-fat`(`write`+`exfat` feature)へ移行した。
hadris-fat = { version = "1.2", optional = true, features = ["exfat", "write"] }

[target.'cfg(target_os = "linux")'.dependencies]
# Linux版の実マウント(fuse_mount.rs参照)。WinFspの`winfsp`クレートに相当する、
# LinuxのFUSE(Filesystem in Userspace)への実Rustバインディング。
fuser = { version = "0.17", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
# Android版の実マウント(Linux版と同じ`fuse_mount.rs`コードパスを共有)。
#
# 上流の`fuser` 0.17は、build.rsが`pure-rust`実装を`linux`/`freebsd`/
# `dragonfly`/`openbsd`/`netbsd`にしか許可しておらず`android`が
# 含まれていないため、素の`fuser`をAndroidターゲットで有効化すると
# libfuse2/libfuse3をpkg-config経由で要求してしまい、Android NDK環境には
# 存在しないためビルドが失敗する(`/dev/fuse`のプロトコル自体はLinuxと
# 同一で、動作原理上は問題ないはずというのが出発点)。
#
# `../third_party/fuser-0.17.0-android-patch`に、build.rsのpure-rust
# 許可リストへ`android`を追加し、かつソース中の`target_os = "linux"`
# gate(mount(2)呼び出し・renameat2フラグ・ioctl番号等)を
# `any(target_os = "linux", target_os = "android")`へ機械的に拡張した
# パッチ済みコピーを用意し、それを直接パスで参照する(上流PR送付前の
# 検証用フォーク。アップストリームへ提案する際はここから差分を切り出す)。
# Cargoの制約上、`fuser`という同じ依存名を異なるソース(レジストリ/パス)
# でOSごとに切り替えることはできない(`cargo metadata`がエラーにする)ため、
# ここでは別名`fuser_android`で依存させ、`lib.rs`側で
# `extern crate fuser_android_patch as fuser;`により`fuser`という
# クレート名へエイリアスすることで、`fuse_mount.rs`等の`use fuser::...`を
# Linux/macOSと共通のコードのまま使えるようにしている。
fuser_android = { package = "fuser_android_patch", path = "../third_party/fuser-0.17.0-android-patch", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
# Mac版の実マウント(fuse_mount.rs参照、Linux版と同じコードパスを共有)。
# macOSでは`fuser`の`macfuse-4-compat` featureを有効にし、システムに
# インストール済みのmacFUSE(またはFUSE-T)カーネル拡張/システム拡張越しに
# 動作する(実機Apple製ハードウェアでの動作確認は未実施、後述)。
# 一時的に`macos-no-mount`(マウント無しスタブ)へ切り替えれば、macFUSE
# 未インストールのcrossビルド環境でも型チェックだけは通せる
# (このセッションではその方法で型レベルの正しさのみ確認した)。
fuser = { version = "0.17", optional = true, features = ["macfuse-4-compat"] }

[build-dependencies]
# NOTE: `dependencies` の winfsp と同じ optional 化が必須。ここを外すと
# `--no-default-features` を指定しても cargo が常に winfsp(および
# winfsp-sys 経由のWinFsp SDKヘッダ)を要求してしまい、WinFsp未導入の
# 非Windows/CI環境でのビルドが不可能になる(READMEの
# `cargo test --no-default-features` の前提が崩れるため要注意)。
winfsp = { version = "0.13", optional = true }

[features]
# CI環境などWinFspヘッダが無い場合でもビルドできるようダミー実装を切替可能に
default = ["winfsp_backend", "gpu_accel"]
winfsp_backend = ["dep:winfsp", "dep:widestring"]
# 実際のD3D12/DirectMLディスパッチとHLSLシェーダの事前コンパイル(dxcが必要)。
# 無効化すると`zfs_accel_hlsl`はCPUフォールバックのみを提供するため、
# WinFsp・dxc・Windows SDKのいずれも不要になり、
# `cargo test --no-default-features` だけでRAID-Z/Z2/Z3のプール管理・
# パリティ計算・障害復旧ロジックを非Windows環境でも検証できる。
gpu_accel = ["zfs_accel_hlsl/gpu"]
# Linux版の実マウント(FUSE経由)。既定では無効(winfsp_backend/gpu_accelと
# 同様、明示的に有効化する)。Linux以外のターゲットでは`fuser`クレート自体が
# 依存関係として存在しないため、他OSでこのfeatureを有効化することはできない。
fuse_backend = ["dep:fuser", "dep:fuser_android"]
# 既存OSの既存フォーマット(FAT32等)を読み書きするブリッジ機能。
# ネイティブライブラリを要さないため全OSで有効化できる。
foreign_fs = ["dep:fatfs", "dep:fscommon", "dep:hadris-fat"]

[lib]
name = "open_raid_z_core"
crate-type = ["cdylib", "rlib"]

# `foreign_fs` feature無効時にfatfsクレートが存在せずビルド不能になるため、
# `cargo test --no-default-features --features fuse_backend`のような
# foreign_fs抜きのコマンドでも失敗しないよう明示する(READMEの前提維持)。
[[example]]
name = "foreign_fs_smoke_test"
required-features = ["foreign_fs"]

[[example]]
name = "format_fat32_image"
required-features = ["foreign_fs"]

[[example]]
name = "exfat_smoke_test"
required-features = ["foreign_fs"]

[[example]]
name = "format_exfat_image"
required-features = ["foreign_fs"]
