[workspace]

[package]
name = "zfs_accel_hlsl"
version = "0.0.1"
edition = "2021"
description = "OpenRuno: ZFS向けNPU/GPUハードウェアアクセラレータ(DirectX 12 Compute + DirectML)"
license = "MPL-2.0"

[dependencies]
windows = { version = "0.58", optional = true, features = [
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_AI_MachineLearning_DirectML",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
] }
thiserror = "1.0"
tracing = "0.1"

[features]
# `gpu`: 実際のD3D12/DirectMLディスパッチとHLSLシェーダの事前コンパイル
# (`build.rs`、dxcが必要)を有効にする。無効時は本クレートは常に
# CPUフォールバック実装のみを提供し、Windows SDK/Vulkan SDK(dxc)を
# インストールしていない環境(Linux/macOS開発機やCI)でも
# `cargo test --no-default-features` で純粋なRAID-Z/Z2/Z3パリティ計算
# ロジック(galois.rs, gf_matrix.rs, raidz_parity.rs, raidz23_parity.rs)
# の正しさを検証できる。実運用(Windows上での実アクセラレーション)には
# `gpu` featureを有効にすること。
default = ["gpu"]
gpu = ["dep:windows"]

[lib]
name = "zfs_accel_hlsl"
crate-type = ["rlib"]
